--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,6 @@ description = ""
 authors = [
     {name = "VictoorLDS", email = "vlds221005@gmail.com"},
 ]
-dependencies = [
-    "django>=4.1.7",
-]
+dependencies = []
 requires-python = ">=3.10"
 license = {text = "MIT"}
