--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ description = ""
 authors = [
     {name = "VictoorLDS", email = "vlds221005@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "djangorestframework>=3.14.0",
+]
 requires-python = ">=3.10"
 license = {text = "MIT"}
