--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,6 @@ description = ""
 authors = [
     {name = "VictoorLDS", email = "vlds221005@gmail.com"},
 ]
-dependencies = [
-    "django>=4.2",
-    "djangorestframework>=3.14.0",
-]
+dependencies = []
 requires-python = ">=3.10"
 license = {text = "MIT"}
