Criação Pasta Models Atualizadas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-[tool.pdm]
-
 [project]
 name = ""
 version = ""
@@ -7,6 +5,9 @@ description = ""
 authors = [
     {name = "VictoorLDS", email = "vlds221005@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "django>=4.2.4",
+    "djangorestframework>=3.14.0",
+]
 requires-python = ">=3.10"
 license = {text = "MIT"}
